# duq_ds3_2024

./: README.md  SYLLABUS.md  pyproject.toml
duq_ds3_2024/week10/: __init__.py  easy_flask.py  thesaurus_flask.py
duq_ds3_2024/week11/: autoencoder.py  tensortango_autoencoder.py
duq_ds3_2024/week11/tensortango/: data_iterator.py  layer.py  loss.py  mlp.py  optimizer.py  tensor.py  train.py
duq_ds3_2024/week14/: website_example.py
duq_ds3_2024/week2/: grants_data.py
duq_ds3_2024/week4/: read_wine_data.py  wine_classifier.py
duq_ds3_2024/week5/: npi_reader.py  wordmashup.py
duq_ds3_2024/week6/: string_distance_features.py
duq_ds3_2024/week7/: grant_doc_db.py  grant_doc_db_creation.py
duq_ds3_2024/week8/: pr.py
duq_ds3_2024/week9/: __init__.py
scripts/: train_wine_classifier.py
