[tool.poetry]
name = "duq-ds3-2024"
version = "0.1.0"
description = "Example files for Duquesne's DS330 class"
authors = ["Arthur <sugdena@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
xgboost = "^2.0.3"
scikit-learn = "^1.4.0"
fasttext = {git = "https://github.com/cfculhane/fastText"}
jarowinkler = "^2.0.1"
sqlalchemy = "^2.0.28"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
flask = "^3.0.2"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
